--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ td {
     height: 30px;
     position: relative;
     padding-left: 15px;
+    padding-right: 5px;
     text-align: left;
     border: 1px solid lightgray;
     border-right: 2px solid darkgray;
@@ -72,6 +73,8 @@ td:hover {
 }
 
 tr:nth-child(1) {
+    text-align: center;
+    padding: 0;
     background: lightgray;
     border-bottom: 2px solid darkgray;
 }
