--- a/style.css
+++ b/style.css
@@ -56,12 +56,12 @@ td {
     width: 75px;
     height: 30px;
     position: relative;
+    margin: auto;
     padding-left: 15px;
-    padding-right: 5px;
+    padding-right: 10px;
     text-align: left;
     border: 1px solid lightgray;
     border-right: 2px solid darkgray;
-
     opacity: 0;
     animation: fadeIn 1s linear;
     animation-fill-mode: forwards;
@@ -73,8 +73,6 @@ td:hover {
 }
 
 tr:nth-child(1) {
-    text-align: center;
-    padding: 0;
     background: lightgray;
     border-bottom: 2px solid darkgray;
 }
