--- a/style.css
+++ b/style.css
@@ -27,45 +27,32 @@ body {
     animation: slideToRight 1s;
 }
 
-@keyframes slideToRight {
-    0% {
-        left: -50px;
-        top: 0;
-        opacity: 0.5;
-    }
-    100% {
-        left: 0;
-        top: 0;
-        opacity: 1;
-    }
-}
-
 table {
     width: fit-content;
     height: max-content;
-    margin: auto;
+    margin: 60px auto;
     position: relative;
     table-layout: fixed;
+    font-family: 'Times New Roman', serif;
+    font-size: 17px;
     border: 2px solid darkgray;
     border-radius: 3px;
     border-collapse: collapse;
-    font-family: 'Times New Roman', serif;
-    font-size: 16px;
-}
 
-td {
-    width: 75px;
-    height: 30px;
-    position: relative;
-    margin: auto;
-    padding-left: 15px;
-    padding-right: 10px;
-    text-align: left;
-    border: 1px solid lightgray;
-    border-right: 2px solid darkgray;
     opacity: 0;
     animation: fadeIn 1s linear;
     animation-fill-mode: forwards;
+}
+
+td {
+    width: 85px;
+    height: 35px;
+    position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    border: 1px solid lightgray;
+    border-right: 2px solid darkgray;
 }
 
 td:hover {
@@ -74,8 +61,26 @@ td:hover {
 }
 
 tr:nth-child(1) {
+    height: 30px;
     background: lightgray;
     border-bottom: 2px solid darkgray;
+}
+
+#reviewArea{
+    width: 320px;
+    height: 60px;
+    line-height: 60px;
+    margin: auto;
+    position: relative;
+    text-align: center;
+    font-family: 'TimesNewRoman', serif;
+    font-size: 27px;
+    border: 2px solid darkgray;
+    box-shadow: 8px 8px darkgray;
+
+    opacity: 0;
+    animation: slideToLeft 1s linear;
+    animation-fill-mode: both;
 }
 
 @keyframes fadeIn {
@@ -83,6 +88,34 @@ tr:nth-child(1) {
         opacity: 0;
     }
     100% {
+        opacity: 1;
+    }
+}
+
+
+@keyframes slideToRight {
+    0% {
+        left: -50px;
+        top: 0;
+        opacity: 0;
+    }
+    100% {
+        left: 0;
+        top: 0;
+        opacity: 1;
+    }
+}
+
+@keyframes slideToLeft {
+    0% {
+        left: 50px;
+        top: 0;
+        opacity: 0;
+
+    }
+    100% {
+        left: 0;
+        top: 0;
         opacity: 1;
     }
 }
