--- a/style.css
+++ b/style.css
@@ -36,11 +36,11 @@ table {
     font-family: 'Times New Roman', serif;
     font-size: 17px;
     border: 2px solid darkgray;
-    border-radius: 3px;
+    border-left: none;
     border-collapse: collapse;
 
     opacity: 0;
-    animation: fadeIn 1s linear;
+    animation: fadeIn 1.25s linear;
     animation-fill-mode: forwards;
 }
 
@@ -52,7 +52,7 @@ td {
     padding-right: 10px;
     text-align: center;
     border: 1px solid lightgray;
-    border-right: 2px solid darkgray;
+    border-left: 2px solid darkgray;
 }
 
 td:hover {
@@ -66,7 +66,7 @@ tr:nth-child(1) {
     border-bottom: 2px solid darkgray;
 }
 
-#reviewArea{
+#reviewArea {
     width: 320px;
     height: 60px;
     line-height: 60px;
@@ -76,10 +76,10 @@ tr:nth-child(1) {
     font-family: 'TimesNewRoman', serif;
     font-size: 27px;
     border: 2px solid darkgray;
-    box-shadow: 8px 8px darkgray;
+    background: lightgray;
 
     opacity: 0;
-    animation: slideToLeft 1s linear;
+    animation: slideToLeft 0.75s linear;
     animation-fill-mode: both;
 }
 
