--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ table {
     table-layout: fixed;
     font-family: 'Times New Roman', serif;
     font-size: 17px;
-    border: 2px solid gray;
+    border: 2px solid darkgray;
     border-radius: 3px;
     border-spacing: 0;
 
@@ -36,16 +36,16 @@ td {
 }
 
 td:not(td:last-child) {
-    border-right: 2px solid gray;
+    border-right: 2px solid darkgray;
 }
 
 td:not(tr:last-child td, tr:first-child td) {
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid darkgray;
 }
 
 tr:first-child td {
     background: lightgray;
-    border-bottom: 2px solid gray;
+    border-bottom: 2px solid darkgray;
 }
 
 td:hover:not(tr:first-child td) {
@@ -62,7 +62,7 @@ td:hover:not(tr:first-child td) {
     text-align: center;
     font-family: 'TimesNewRoman', serif;
     font-size: 25px;
-    border: 2px solid gray;
+    border: 2px solid darkgray;
     border-radius: 3px;
     background: lightgray;
 
