--- a/baseStyle.css
+++ b/baseStyle.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    margin: 100px auto 150px;
+    margin: 100px 50px 150px;
     text-align: center;
     background-image: url('asset/TriangleBackground.png');
     background-size: cover;
