--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     min-width: 200px;
     max-width: max-content;
     margin: auto;
-    overflow-x: auto;
+    overflow-x: scroll;
     border: 2px solid darkgray;
     border-radius: 3px;
 }
