--- a/stylesheet/baseStyle.css
+++ b/stylesheet/baseStyle.css
@@ -79,8 +79,8 @@ table {
 }
 
 td {
-    width: max-content;
-    height: 37px;
+    width: 100px;
+    height: 40px;
     padding-left: 10px;
     padding-right: 10px;
     font-family: 'TimesNewRoman', serif;
